@@ -8,6 +8,7 @@ planned as v0.13
   test cases that depend on a non-null default value, this tests will fail. To
   resolve this issue, reset the default value.
 - A warning message shows up if a circuit with unnamed inputs/outputs is analysed.
+- A warning message shows up if a circuit with missing pin numbers is exported to a hardware-related file.
 - Comments are allowed in hex files.
 
 v0.12.1, released on 05. Jun 2016
